--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "TODO",
-  "description": "TODO",
-  "version": "0.0.2",
+  "name": "neumorphism",
+  "description": "Fast Preview Neumorphic Designer and Bootstrap Code Generator",
+  "version": "1.0.2",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
