--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "emotion": "^10.0.27",
     "polka": "next",
     "sirv": "^0.4.0"
   },
