--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "compression": "^1.7.1",
     "emotion": "^10.0.27",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
