--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "chroma-js": "^2.1.0",
     "compression": "^1.7.1",
     "emotion": "^10.0.27",
     "polka": "next",
